# LaunchKit

./: .env.example  .gitignore  docker-compose.yml  license.md  readme.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/models/: user.py
backend/app/schemas/: auth.py
backend/app/utils/: jwt.py
cli/: pyproject.toml  readme.md  setup.py
cli/launchkit_cli/: cli.py
cli/launchkit_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/launchkit_cli/commands/: config.py  deploy.py  domain.py  env.py  hello.py  init.py  login.py  rollback.py
cli/launchkit_cli/services/: api.py  auth.py  detector.py  logger.py
cli/launchkit_cli/utils/: docker.py  files.py  validators.py
cli/tests/: test_hello.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  prettier.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CommonButton.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
infrastructure/cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/cdk/cdk.out/: LaunchKitBackend.assets.json  LaunchKitBackend.template.json  LaunchKitDatabase.assets.json  LaunchKitDatabase.template.json  LaunchKitFrontend.assets.json  LaunchKitFrontend.template.json  manifest.json  tree.json
infrastructure/cdk/lib/: backend-stack.ts  database-stack.ts  (+1 more)
(+6 files in other folders)
